Fix file type icon alignment issue

--- a/src/components/workspace/Tabs/Tabs.module.scss
+++ b/src/components/workspace/Tabs/Tabs.module.scss
@@ -31,7 +31,7 @@
       border-right: 1px solid rgba(255, 255, 255, 0.1);
     }
     &::before {
-      margin-top: 5%;
+      margin-top: 2%;
     }
     &:hover {
       .close {
